--- a/scanners/covid/assam-vaccine-scanner.html
+++ b/scanners/covid/assam-vaccine-scanner.html
@@ -198,6 +198,7 @@
 
                     let outStr = ` <div class="alert ${cls}">
                                     <strong>${ses.name}</strong>
+                                    <br>Vaccine: ${ses.vaccine}
                                     <br>Dose 1: ${dose1}
                                     <br>Dose 2: ${dose2} 
                                 </div>`;
